<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/more_login_background" >

    <!-- include top  style xml -->

    <include
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/home_top_back" />
    <!-- top  以下的所有布局 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/list_back_pic"
            android:paddingBottom="30dp" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="16dp"
                android:text="@string/leave"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv1"
                android:layout_alignBottom="@+id/tv1"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/tv1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv1"
                android:layout_below="@+id/tv1"
                android:layout_marginTop="14dp"
                android:text="@string/wait"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv3"
                android:layout_alignBottom="@+id/tv3"
                android:layout_alignLeft="@+id/tv2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv3"
                android:layout_below="@+id/tv3"
                android:layout_marginTop="25dp"
                android:text="@string/bus_info"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv5"
                android:layout_below="@+id/tv5"
                android:layout_marginTop="20dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv6"
                android:layout_below="@+id/tv6"
                android:layout_marginRight="10dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv7"
                android:layout_below="@+id/tv7"
                android:layout_marginRight="10dp"
                android:layout_marginTop="28dp"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv5"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv5"
                android:text="123456"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>